# GodHunter-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Engine/: GenerateProjects.bat  premake5.lua
Engine/GodHunter/src/: GodHunter.h
Engine/GodHunter/src/GodHunter/: Application.cpp  Application.h  Core.h  EntryPoint.h
GodHunter/: CMakeLists.txt
GodHunter/src/: GodHunter.h  assets.h  debugging_tools.cpp  debugging_tools.h  engine.cpp  engine.h  entity_system.cpp  entity_system.h  human_interface_devices.cpp  human_interface_devices.h
GodHunter/src/Core/Debug/: Logger.cpp  Logger.h
GodHunter/src/Core/Events/: EngineEvents.h
GodHunter/src/Core/Logger/: Logger.cpp  Logger.h
GodHunter/src/Core/OsSpecific/: OsSpecificAudio.cpp  OsSpecificClock.cpp  OsSpecificDisplay.cpp  OsSpecificEvent.cpp  OsSpecificSystem.cpp  OsSpecificSystem.h
GodHunter/src/Core/Structures/: Color.h  Event.h  WindowInformation.h
GodHunter/src/Debug/: Debug.h  FrameRate.h  Logger.h
GodHunter/src/Debug/FrameRate/: FrameRate.cpp
GodHunter/src/GodHunter/: Application.cpp  Application.h  Core.h  Engine.cpp  Engine.h  EngineState.cpp  EntryPoint.h
GodHunter/src2/Core/: Core.h
GodHunter/src2/Core/Events/: UserEvents.h
GodHunter/src2/Core/OsSpecific/: OsSpecificAudio.cpp  OsSpecificClock.cpp  OsSpecificEvent.cpp  OsSpecificSystem.cpp  OsSpecificSystem.h
GodHunter/src2/Debug/FrameRate/: FrameRate.h
GodHunter/src2/Debug/Logger/: Logger.cpp
GodHunter/src2/GodHunter/: EngineState.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/Sandbox/src/: Sandbox.cpp
Sandbox/assets/: TestFile01.txt
Sandbox/assets/scripts/: TestFile02.py  TestFile03.py
Sandbox/src/: Sandbox.cpp  main.cpp
style/: s01_naming.md  s02_header.md  s03_scoping.md  s04_comments.md
